--- a/app/src/main/res/layout/activity_receipt.xml
+++ b/app/src/main/res/layout/activity_receipt.xml
@@ -72,7 +72,7 @@
             android:orientation="vertical"
             android:paddingHorizontal="10dp"
             android:paddingTop="10dp"
-            android:paddingBottom="100dp">
+            android:paddingBottom="150dp">
 
             <FrameLayout
                 android:layout_width="100dp"
@@ -469,6 +469,7 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/colorBlack"
                     android:textSize="13sp"
+                    android:id="@+id/tvReceiptNoteTitle"
                     android:text="Note: "/>
 
                 <TextView
@@ -520,14 +521,30 @@
 
     </ScrollView>
 
-    <Button
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:layout_margin="5dp"
-        android:background="@drawable/button_border_fill"
-        android:textColor="@color/colorWhite"
-        android:text="Share Receipt"
-        android:id="@+id/btnReceiptShare"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="bottom">
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:background="@drawable/button_border"
+            android:textColor="@color/colorBlack"
+            android:text="Print"
+            android:id="@+id/btnReceiptPrint"/>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_margin="5dp"
+            android:background="@drawable/button_border_fill"
+            android:textColor="@color/colorWhite"
+            android:text="Share"
+            android:id="@+id/btnReceiptShare"/>
+    </LinearLayout>
 
 </FrameLayout>
