--- a/app/src/main/res/layout/fragment_analytic.xml
+++ b/app/src/main/res/layout/fragment_analytic.xml
@@ -36,7 +36,7 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Total Revenue Merchant"
+                            android:text="Total Nett Profit"
                             android:textColor="@color/colorBlack"
                             android:textSize="18sp"
                             android:gravity="center_horizontal"/>
@@ -67,7 +67,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:textSize="16sp"
-                                android:text="Nett Profit : "
+                                android:text="Total Revenue : "
                                 android:textColor="@color/colorBlack"/>
 
                             <ProgressBar
