--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -25,8 +25,8 @@
             android:title="@string/transaction" />
 
         <item
-            android:id="@+id/nav_custom_receipt"
-            android:title="@string/custom_receipt" />
+            android:id="@+id/nav_receipt_settings"
+            android:title="@string/receipt_setting" />
 
         <item
             android:id="@+id/nav_analytics"
