--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -52,9 +52,9 @@
     </fragment>
 
     <fragment
-        android:id="@+id/nav_custom_receipt"
+        android:id="@+id/nav_receipt_settings"
         android:name="com.chcreation.pointofsale.custom_receipt.CustomReceiptFragment"
-        android:label="Receipt Template"
+        android:label="@string/receipt_setting"
         tools:layout="@layout/fragment_custom_receipt" >
         <action
             android:id="@+id/action_nav_slideshow_to_nav_home"
